<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_dashboard_48px"
            android:title="@string/nav_overview" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/ic_group_work_48px"
            android:title="@string/nav_ingredients" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_folder_24px"
            android:title="@string/nav_categories" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_48px"
            android:title="@string/nav_settings" />
    </group>

</menu>
