<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="add_meal_image_select_options">
        <item>@string/add_meal_image_select_from_gallery</item>
        <item>@string/add_meal_image_select_from_camera</item>
    </string-array>
    <string-array name="add_meal_image_select_remove_options">
        <item>@string/add_meal_image_select_from_gallery</item>
        <item>@string/add_meal_image_select_from_camera</item>
        <item>@string/add_meal_image_remove</item>
    </string-array>
    <string-array name="add_ingredient_image_select_options">
        <item>@string/add_ingredient_image_select_from_gallery</item>
        <item>@string/add_ingredient_image_select_from_camera</item>
    </string-array>
    <string-array name="add_ingredient_image_select_remove_options">
        <item>@string/add_ingredient_image_select_from_gallery</item>
        <item>@string/add_ingredient_image_select_from_camera</item>
        <item>@string/add_ingredient_image_remove</item>
    </string-array>
    <string-array name="ingredient_item_options">
        <item>@string/ingredients_item_add_to_new_meal</item>
        <item>@string/ingredients_item_edit_ingredient</item>
        <item>@string/ingredients_item_delete_ingredient</item>
    </string-array>
</resources>